--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body {
     display: flex;
     justify-content: center;
     height: 100vh;
-    align-content: center;
+    align-items: center;
+
 
 }
 
@@ -12,7 +13,8 @@ body {
 
     height: 290px;
     padding: 90px 30px 0 30px;
-    background-color: brown;
+    background-color: #fc8989;
+    border-radius: 10px;
 
 }
 
@@ -34,4 +36,61 @@ body {
 .white-keys {
 
     display: flex;
+}
+
+.black-keys {
+
+    position: relative;
+    display: flex;
+}
+
+.black-key {
+
+    width: 38px;
+    height: 160px;
+    border-radius: 0 0 5px 5px;
+    box-sizing: border-box;
+    position: absolute;
+    background-color: black;
+
+}
+
+.black-key:nth-child(1){
+    left: 48px
+}
+
+.black-key:nth-child(2){
+    left: 117px
+}
+
+.black-key:nth-child(3){
+    left: 253px
+}
+
+.black-key:nth-child(4){
+    left: 320px
+}
+
+.black-key:nth-child(5){
+    left: 389px
+}
+
+.black-key:nth-child(6){
+    left: 525px
+}
+
+.black-key:nth-child(7){
+    left: 594px
+}
+
+.black-key:nth-child(8){
+    left: 662px
+}
+
+.black-key:nth-child(9){
+    left: 797px
+}
+
+.black-key:nth-child(10){
+    left: 865px
 }
